fix api voucher
